--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodejs index.js",
+    "start": "./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "minimist": "^1.2.0",
+    "snoowrap": "^1.15.2",
     "subtitles-parser": "0.0.2"
   }
 }
