--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "minimist": "^1.2.0",
+    "snoostorm": "^1.0.2",
     "snoowrap": "^1.15.2",
     "subtitles-parser": "0.0.2"
   }
